@startuml

skinparam monochrome true

class Person {
    firstname
    lastname
    email
    phone
}

class Artist {
    name
}

class Address {
    line1
    line2
    line3
    T
    region
    postcode
    countryrt
}

class Venue {
    date
}

class Program {
    genre
    description
}
class Ticket {
    coordinate
    state
}

class Category {
    price
}



Program "1" -- "1:*" Venue : "consists of"
Program "1:*" -- "1:*" Artist : "performed by"
Venue "0:*" -- "1" Address : "hosted at"
Venue "1" -- "1:*" Ticket : "offers"
Ticket "0:*" -- "1" Category : "belongs to"
Program "1:*" -- "1" Person : "organized by"
Person "1" -- "0:*" Ticket : "bought"
Person "0:*" -- "1" Address : "lives at"

@enduml